# risk_analyzer_ml

./: .gitignore  main.py  pyproject.toml
app/: app.py
config/: config_manager.py  settings.py  training_config.py
controllers/: scoring_controller.py  training_controller.py
core/: data_source.py
models/classes/: ClientSummary.py  Okved.py  Сlient.py
models/database_entity/: scoring_dataset.py  training_dataset.py
models/dto/: scoring_record.py  training_record.py
models/dto/request/: training_request.py
models/dto/response/: scoring_response.py  training_response.py
models/enums/: ManagementRiskLevel.py  RiskLevel.py  TransactionType.py
repositories/: scoring_repository.py  training_repository.py
services/: DatabaseService.py  lightgbm_service.py  pipeline_service.py  scoring_service.py
training_output/metadata/: risk_scoring_model_20251104_115209_metadata.json
training_output/models/: risk_scoring_model_20251104_115209.pkl
