[tool.poetry]
name = "mlproject"
version = "0.1.0"
description = "AML Client Scoring System"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^0.19.0"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"